; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/msi/extr_action.c_ACTION_PerformAction.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/msi/extr_action.c_ACTION_PerformAction.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64 }

@.str = private unnamed_addr constant [24 x i8] c"Performing action (%s)\0A\00", align 1
@ERROR_FUNCTION_NOT_CALLED = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [25 x i8] c"unhandled msi action %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ACTION_PerformAction(%struct.TYPE_5__* %0, i32* %1, i64 %2) #0 {
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i32* %1, i32** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = call i32 @debugstr_w(i32* %8)
  %10 = call i32 @TRACE(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i32 %9)
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 0
  store i64 0, i64* %12, align 8
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %14 = load i32*, i32** %5, align 8
  %15 = call i64 @ACTION_HandleStandardAction(%struct.TYPE_5__* %13, i32* %14)
  store i64 %15, i64* %7, align 8
  %16 = load i64, i64* %7, align 8
  %17 = load i64, i64* @ERROR_FUNCTION_NOT_CALLED, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %24

19:                                               ; preds = %3
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %21 = load i32*, i32** %5, align 8
  %22 = load i64, i64* %6, align 8
  %23 = call i64 @ACTION_HandleCustomAction(%struct.TYPE_5__* %20, i32* %21, i64 %22)
  store i64 %23, i64* %7, align 8
  br label %24

24:                                               ; preds = %19, %3
  %25 = load i64, i64* %7, align 8
  %26 = load i64, i64* @ERROR_FUNCTION_NOT_CALLED, align 8
  %27 = icmp eq i64 %25, %26
  br i1 %27, label %28, label %32

28:                                               ; preds = %24
  %29 = load i32*, i32** %5, align 8
  %30 = call i32 @debugstr_w(i32* %29)
  %31 = call i32 @WARN(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0), i32 %30)
  br label %32

32:                                               ; preds = %28, %24
  %33 = load i64, i64* %7, align 8
  ret i64 %33
}

declare dso_local i32 @TRACE(i8*, i32) #1

declare dso_local i32 @debugstr_w(i32*) #1

declare dso_local i64 @ACTION_HandleStandardAction(%struct.TYPE_5__*, i32*) #1

declare dso_local i64 @ACTION_HandleCustomAction(%struct.TYPE_5__*, i32*, i64) #1

declare dso_local i32 @WARN(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
